
2011-xx-yy (3.3-dev):
	-renamed "jWordSplitter" in package path to "jwordsplitter" to be in accordance with 
	 Java conventions 
	-new file exceptionsGerman.txt added to JAR that contains special cases
	 to overwrite the algorithm. With this we now get a correct split for e.g.
	 Klimasünderecke -> Klima + Sünder + Ecke (used to be: Klima + Sünde + Recke)
	-small dictionary cleanup (e.g. removing some three-letter words)

2011-02-06 (3.2):
	-now built with Maven, no other changes

2010-09-18 (3.1):
	-fixed a bug: compound parts that ended in "s" caused the splitting not to work

2009-10-25 (3.0):
	-using generics (i.e. at least Java 1.5 is required now for jWordSplitter)
	-AbstractWordSplitter.splitWords(String) is now called AbstractWordSplitter.splitWord(String)
	-slightly better handling of German compounds with hyphens
	-small extensions to the dictionary 

2008-11-09 (2.2):
	-in strict mode the minimum length of words is not longer ignored
	-major dictionary update: using a smaller dictionary with less words
	 but hopefully better quality (it's the one that was used for 
	 LanguageTool already)

2008-07-01 (2.1):
	-now distributed as a ZIP
	-simplified output format of TestjWordSplitterGerman
	-comes with a larger German dictionary
	-ImportTxtFile is now called SerializeDict

2007-05-12 (2.0):
	-The JAR can now be used directly to split a list of German words:
	 java -jar jWordSplitter.jar <filename>
	
2007-05-08:
	-checked in original version from Sven Abels
	-removed log4j dependency
	-improved exception handling, i.e. exceptions aren't caught and logged but thrown
	-code cleanup 
	-hardcoded three examples of German compound parts that don't exist as stand-alone 
	 words ("miet-", "grenz-", "ess-")